# sdl3_sokol

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
